--- a/src/app/components/home/home-list/home-new.component.html
+++ b/src/app/components/home/home-list/home-new.component.html
@@ -146,9 +146,7 @@
   
           <div class="col-xl-6 col-12">
             <div class="card">
-              <div
-                class="card-header d-flex flex-sm-row flex-column justify-content-md-between align-items-start justify-content-start"
-              >
+              <div class="card-header d-flex flex-sm-row flex-column justify-content-md-between align-items-start justify-content-start">
                 <h4 class="card-title mb-sm-0 mb-1">Users</h4>
               </div>
               <div class="card-body">
@@ -167,6 +165,33 @@
               </div>
             </div>
           </div>
+
+
+          <div class="col-xl-6 col-12">
+            <div class="card">
+              <div class="card-header d-flex flex-sm-row flex-column justify-content-md-between align-items-start justify-content-start">
+                <h4 class="card-title mb-sm-0 mb-1">All Orders</h4>
+              </div>
+              <div class="card-body">
+                <div id="line-chart" #apexLineChartRef>
+                  <apx-chart
+                    [series]="apexLineChart?.series"
+                    [chart]="{
+                      height: 400,
+                      width: isMenuToggled === false ? apexLineChartRef?.offsetWidth : apexLineChart?.chart.width, 
+                      type: 'line'
+                    }"
+                    [xaxis]="apexLineChart?.xaxis"
+                    [dataLabels]="apexLineChart?.dataLabels"
+                    [colors]="apexLineChart?.colors"
+                    [stroke]="apexLineChart?.stroke"
+                    [legend]="apexLineChart?.legend"
+                  ></apx-chart>
+                </div>
+              </div>
+            </div>
+          </div>
+          
         </div>
       </section>
       <!-- Basic Alerts end -->
