--- a/src/app/components/order/order-list/order-list.component.html
+++ b/src/app/components/order/order-list/order-list.component.html
@@ -1,11 +1,29 @@
 <div class="content-wrapper container-xxl p-0">
-  <div class="content-body">
+  <div class="content-body ">
     <!-- User List -->
     <section class="users-list-wrapper">
+      
       <!-- users filter start -->
-      <div class="card">
-        <h5 class="card-header">Order Filter</h5>
-        <div class="card-body">
+      <div class="card tableeeeeee p-2">
+        <h5 class="card-header h2">Order Filter</h5>
+        <div class="p-4">
+          <nav class="nav nav-pills flex-column flex-sm-row">
+            <a
+              *ngFor="let status of newOrderStatus"
+              class="flex-sm-fill text-sm-center nav-link mx-2 text-white border border-1 py-3 "
+              [class.active]="selectedStatus === status.value"
+              (click)="onSelectStatus(status.value)"
+              href="javascript:void(0)"
+            >
+              {{ status.name }}
+            </a>
+          </nav>
+        </div>
+        <!-- <div class="mt-3">
+          <p>Selected Status: <strong>{{ selectedStatus }}</strong></p>
+        </div>
+        -->
+        <!-- <div class="card-body">
           <div class="users-list-filter">
             <form>
               <div class="row">
@@ -25,14 +43,35 @@
               </div>
             </form>
           </div>
-        </div>
+        </div> -->
       </div>
       <!-- users filter end -->
 
-      <div class="card">
+      <!-- Start Navs  -->
+      <!-- <nav class="nav nav-pills flex-column flex-sm-row">
+
+        
+        <a
+          *ngFor="let status of newOrderStatus"
+          class="flex-sm-fill text-sm-center nav-link"
+          [class.active]="selectedStatus === status.value"
+          (click)="onSelectStatus(status.value)"
+          href="javascript:void(0)"
+        >
+          {{ status.name }}
+        </a>
+      </nav> -->
+      <!-- <div class="mt-3">
+        <p>Selected Status: <strong>{{ selectedStatus }}</strong></p>
+      </div>
+      -->
+
+      <!-- End Navs  -->
+
+      <div class="card tableeeeeee p-3">
         <div class="row">
-          <div class="col-md-6 col-12">
-            <div class="d-flex justify-content-between align-items-center m-1">
+          <div class="col-md-6 col-12 ">
+            <div class="d-flex justify-content-between align-items-center m-1 ">
               <label class="d-flex align-items-center"
                 >Show
                 <select class="form-control mx-25" [(ngModel)]="selectedOption">
@@ -82,6 +121,7 @@
           [footerHeight]="50"
           [scrollbarH]="true"
         >
+        <!-- Id  -->
           <ngx-datatable-column name="Order ID" prop="order_id" [width]="100">
             <ng-template
               let-id="value"
@@ -96,19 +136,31 @@
             </ng-template>
           </ngx-datatable-column>
 
+
+          <!-- Shipment UID -->
           <ngx-datatable-column
             name="Shipment UID"
             prop="shipment_uid"
             [width]="150"
           ></ngx-datatable-column>
 
-          <ngx-datatable-column name="Store" prop="store_name" [width]="220">
+
+          <!-- Shipment ID -->
+          <ngx-datatable-column
+            name="Shipment ID"
+            prop="shipment_id"
+            [width]="150"
+          ></ngx-datatable-column>
+
+          <!-- store_name -->
+          <ngx-datatable-column name="Store" prop="store_name" [width]="220" >
             <ng-template
               let-row="row"
               let-name="value"
               ngx-datatable-cell-template
             >
-              <div class="d-flex align-items-center">
+              <div class="d-flex align-items-center"  [routerLink]="'/order-details/' + row.order_id"
+              >
                 <div class="mr-2">
                   <ngx-avatar
                     class="m-1"
@@ -140,7 +192,7 @@
               let-name="value"
               ngx-datatable-cell-template
             >
-              <div class="d-flex align-items-center">
+              <div class="d-flex align-items-center" [routerLink]="'/order-details/' + row.order_id">
                 <div class="mr-2">
                   <ngx-avatar
                     class="m-1"
