--- a/src/app/components/order/order-list/order-list.component.html
+++ b/src/app/components/order/order-list/order-list.component.html
@@ -10,15 +10,16 @@
           <nav class="nav nav-pills flex-column flex-sm-row">
             <a
               *ngFor="let status of newOrderStatus"
-              class="flex-sm-fill text-sm-center nav-link mx-2 text-white border border-1 py-3 "
+              class="flex-sm-fill text-sm-center nav-link mx-2 text-white border border-1 py-3"
               [class.active]="selectedStatus === status.value"
-              (click)="onSelectStatus(status.value)"
+              (click)="onStatusChange(status.value)"
               href="javascript:void(0)"
             >
               {{ status.name }}
             </a>
           </nav>
         </div>
+        
         <!-- <div class="mt-3">
           <p>Selected Status: <strong>{{ selectedStatus }}</strong></p>
         </div>
@@ -217,7 +218,7 @@
             </ng-template>
           </ngx-datatable-column>
 
-          <ngx-datatable-column
+          <!-- <ngx-datatable-column
             name="Address"
             prop="deliver_address"
             [width]="400"
@@ -236,19 +237,20 @@
                 {{ address.government }}
               </div>
             </ng-template>
-          </ngx-datatable-column>
+          </ngx-datatable-column> -->
 
           <ngx-datatable-column name="status" prop="order_status" [width]="150">
             <ng-template let-status="value" ngx-datatable-cell-template>
               <div
                 class="badge badge-pill"
                 [ngClass]="{
-                  'badge-light-primary': status == 'New',
+                  'badge-light-primary': status== 'New',
                   'badge-light-secondary': status == 'On the way',
                   'badge-light-success': status == 'Delivered',
                   'badge-light-warning': status == 'Not Delivered',
-                  'badge-light-danger': status == 'Canceled by User',
-                  'badge-light-danger': status == 'Canceled by store'
+                  'badge-light-dark':  status == 'Canceled By User',
+                  'badge-light-danger': status == 'Preparing',
+                  'badge-light-success': status == 'Delivered To Warehouse'
                 }"
               >
                 {{ status }}
@@ -256,7 +258,7 @@
             </ng-template>
           </ngx-datatable-column>
 
-          <ngx-datatable-column
+          <!-- <ngx-datatable-column
             name="Payment Method"
             prop="payment_method"
             [width]="180"
@@ -272,7 +274,7 @@
                 {{ met }}
               </div>
             </ng-template>
-          </ngx-datatable-column>
+          </ngx-datatable-column> -->
 
           <ngx-datatable-column
             name="Products Count "
